--- a/web/templates/appsettings/users/index.html
+++ b/web/templates/appsettings/users/index.html
@@ -11,6 +11,7 @@
                 <span flex></span>
 
                 <md-button class="md-icon-button"
+                           data-if-setting="appsetting:users:write"
                            data-ng-click="vm.addUser()"
                 >
                     <md-tooltip>
