Hide some elements due to the user's rights.

--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -58,7 +58,7 @@
         </md-sidemenu-content>
     </md-sidemenu-group>
 
-    <md-sidemenu-group>
+    <md-sidemenu-group data-if-setting="interface:own:*">
         <md-subheader class="md-no-sticky">
             {{ ::'MANAGEMENT' | translate }}
         </md-subheader>
