--- a/web/templates/login/index.html
+++ b/web/templates/login/index.html
@@ -3,7 +3,7 @@
         <form flex="50" data-ng-submit="vm.login()" data-ng-controller="Login.MainController as vm">
             <md-card>
                 <md-card-title>
-                    <span class="md-headline">{{ 'LOGIN_HEADLINE' | translate }}</span>
+                    <span id="login_page_title" class="md-headline">{{ 'LOGIN_HEADLINE' | translate }}</span>
                 </md-card-title>
 
                 <md-card-content>
