--- a/web/templates/settings/index.html
+++ b/web/templates/settings/index.html
@@ -1,4 +1,4 @@
-<div data-ng-app="Settings" layout="row" layout-md="column" flex>
+<div id="settings_ui_container" data-ng-app="Settings" layout="row" layout-md="column" flex>
     <data-user-settings flex></data-user-settings>
     <danger-zone flex></danger-zone>
     <app-settings flex></app-settings>
