--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -63,7 +63,7 @@
             {{ ::'MANAGEMENT' | translate }}
         </md-subheader>
 
-        <md-sidemenu-button href="#/apis">
+        <md-sidemenu-button id="link_api_management" href="#/apis">
             <md-icon>leak_add</md-icon>
             <span>{{ ::'API_MANAGEMENT' | translate }}</span>
         </md-sidemenu-button>
