--- a/web/templates/api-manager/partials/dialog-create-api.html
+++ b/web/templates/api-manager/partials/dialog-create-api.html
@@ -1,9 +1,10 @@
-<md-dialog flex flex-gt-xs="50">
+<md-dialog id="dialog_new_api_creation" flex flex-gt-xs="50">
     <md-toolbar>
         <div class="md-toolbar-tools">
             <h2>{{ ::'CREATE_API' | translate }}</h2>
             <span flex></span>
-            <md-button class="md-icon-button"
+            <md-button id="btn_cancel_api_creation"
+                       class="md-icon-button"
                        data-ng-click="vm.cancel()"
             >
                 <md-icon>close</md-icon>
@@ -32,7 +33,8 @@
                             aria-label="{{ ::'TYPE' | translate }}"
                             required
                     >
-                        <md-option value="{{ option }}"
+                        <md-option id="option_{{ option }}"
+                                   value="{{ option }}"
                                    data-ng-repeat="option in vm.apiTypes"
                         >
                             {{ option.toUpperCase() | translate }}
@@ -41,7 +43,7 @@
                 </md-input-container>
 
                 <span>{{ ::'INTERVAL' | translate }}</span>
-                <md-slider-container data-ng-disabled="vm.form.type === 'inner'">
+                <md-slider-container>
                     <md-slider flex
                                data-ng-model="vm.form.interval"
                                min="1"
@@ -50,10 +52,10 @@
                                aria-label="{{ ::'INTERVAL' | translate }}"
                     ></md-slider>
                     <md-input-container>
-                        <input flex type="number"
+                        <input type="number"
                                min="1"
                                max="3600"
-                               id="api_manager_update_api_interval"
+                               id="input_create_new_api_interval"
                                data-ng-model="vm.form.interval"
                                aria-label="{{ ::'INTERVAL' | translate }}"
                         />
