--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -4,7 +4,7 @@
             {{ ::'DIAGNOSTICS' | translate }}
         </md-subheader>
 
-        <md-sidemenu-button href="#/dashboard">
+        <md-sidemenu-button id="link_dashboard" href="#/dashboard">
             <md-icon>dashboard</md-icon>
             <span>{{ ::'DASHBOARD' | translate }}</span>
         </md-sidemenu-button>
